--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.9",
     "ngx-loading": "^8.0.0",
     "ngx-mat-alert-confirm": "^10.0.2",
+    "pdfmake": "^0.1.71",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
